:baby_bottle: edit input

--- a/docs/feui/guide/component/component.html
+++ b/docs/feui/guide/component/component.html
@@ -525,11 +525,11 @@
 <tbody>
 <tr>
 <td style="text-align:center"><h3>基础组件</h3></td>
-<td style="text-align:center">-</td>
-<td style="text-align:center">-</td>
-<td style="text-align:left">-</td>
-<td style="text-align:left">-</td>
-<td style="text-align:center">-</td>
+<td style="text-align:center"></td>
+<td style="text-align:center"></td>
+<td style="text-align:left"></td>
+<td style="text-align:left"></td>
+<td style="text-align:center"></td>
 </tr>
 <tr>
 <td style="text-align:center">410</td>
@@ -637,11 +637,11 @@
 </tr>
 <tr>
 <td style="text-align:center"><h3>表单组件</h3></td>
-<td style="text-align:center">-</td>
-<td style="text-align:center">-</td>
-<td style="text-align:left">-</td>
-<td style="text-align:left">-</td>
-<td style="text-align:center">-</td>
+<td style="text-align:center"></td>
+<td style="text-align:center"></td>
+<td style="text-align:left"></td>
+<td style="text-align:left"></td>
+<td style="text-align:center"></td>
 </tr>
 <tr>
 <td style="text-align:center">450</td>
@@ -713,6 +713,14 @@
 <td style="text-align:center">日历组件</td>
 <td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/inlinecalendar.html">https://feui.gitee.io/docs/feui/guide/component/inlinecalendar.html</a></td>
 <td style="text-align:left"><a href="https://feui.gitee.io/#/inlinecalendar">https://feui.gitee.io/#/inlinecalendar</a></td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
+<td style="text-align:center">467</td>
+<td style="text-align:center">Input</td>
+<td style="text-align:center">输入框</td>
+<td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/input.html">https://feui.gitee.io/docs/feui/guide/component/input.html</a></td>
+<td style="text-align:left"><a href="https://feui.gitee.io/#/input">https://feui.gitee.io/#/input</a></td>
 <td style="text-align:center">-</td>
 </tr>
 <tr>
