:baby_bottle: edit demo iphonex

--- a/docs/feui/guide/component/demo.html
+++ b/docs/feui/guide/component/demo.html
@@ -512,7 +512,7 @@
     
     <div id='pContent'>
       <p>举个栗子</p>
-<div style="width:360px;height:722px;background:url('/docs/images/iphonex.png');margin:15px;position: relative;"><br>  <div style="position: absolute;background:url('/docs/images/iphonex_right.png');width:24px;height:674px;right:0;top: 48px;"></div><br>  <iframe style="width:330px;height:650px; border: 0; outline: 0;margin:6px 0 0 24px;border-radius:5px 5px 73px 30px" src="https://feui.gitee.io"></iframe><br></div> 
+<div style="width:360px;height:722px;background:url('/docs/images/iphonex.png');margin:15px;position: relative;"><br>  <iframe style="-webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC);width:311px;height:651px; border: 0; outline: 0;margin:27px 0 0 24.4px;border-radius:4px 3px 30px 30px;" src="http://127.0.0.1:7788/"></iframe><br></div> 
     </div>
     
       <div class="guide-links">
